--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
+    "mockjs": "^1.1.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
